fastapi-graphql-oauth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-todo
  namespace: graphql-todo
spec:
  type: ClusterIP
  selector:
    app: graphql-todo
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
